- Added pweather command to change weather for the client side only (caliber.pweather)
  all commands perfaced with a "p" are client side only should only be used when playing on a server. Requires LuckPerms for permissions.
- Adjusted recipes for new layered versions of blocks
- Bugfix: fixed Grass Layer texture
- Bugfix: fixed Corner Slab hitboxes
- Bugfix: fixed pressure plate tags

0.0.19
- Added a total of 1,067 new blocks!
- Current Mod Block Count is at 2,631
- Added Hammer Item for cycling blockstate conditions (caliber.hammer
- Added all variants of Beige Plaster
- Added all variants of Brown Plaster
- Added all variants of Ochre Plaster
- Added all variants of Tan Plaster
- Added all variants of White Plaster
- Added all variants of Half Timbered Beige Plaster
- Added all variants of Half Timbered Brown Plaster
- Added all variants of Half Timbered Ochre Plaster
- Added all variants of Half Timbered Tan Plaster
- Added all variants of Half Timbered White Plaster
- Added all variants of Deepslate
- Added all variants of Deepslate Bricks
- Added all variants of Deepslate Tiles
- Added all variants of Cobbled Deepslate
- Added all variants of Polished Deepslate
- Added all block variants of Pillar Block
- Removed unused texture files
- Updated Silver and Tin Textures

0.0.20 (in progress)
- Added 2 Modes for Layered Blocks (Slab Mode & Layer Mode)
    - Slab Mode: Only slab thickness blocks will be placed when placing layered blocks. Use the keybind (m) to place layered blocks.
    - Layer Mode: Only layered blocks will be placed when placing layered blocks. Use the keybind (m) to place slab thickness blocks.
- Added keybind (m) to enable Conquest like BlockState behaviour for Corner Blocks, Quarter Blocks, Vertical Quarter Blocks, Slab Blocks, Slab Blocks with the LAYERS property, otherwise they will function like the original slab thickness blocks.
- Added buildmode command to change behaviour of all Layered Blocks (caliber.buildmode)